# claude-data-analysis

./: .gitignore  EDA.ipynb  EDA_Refactored.ipynb  README.md  app.py  business_metrics.py  data_loader.py  main.py  pyproject.toml
