[project]
name = "claude-data-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.6",
    "nbformat>=5.10.4",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
