[project]
name = "claude-data-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=21.0.0",
    "flake8>=3.9.0",
    "ipykernel>=6.0.0",
    "jupyter>=1.0.0",
    "matplotlib>=3.4.0",
    "nbformat>=5.10.4",
    "numpy>=1.21.0",
    "openpyxl>=3.0.9",
    "pandas>=1.3.0",
    "plotly>=5.0.0",
    "pytest>=6.0.0",
    "scikit-learn>=1.0.0",
    "scipy>=1.7.0",
    "xlrd>=2.0.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
